base.html導入、デザイン反映

--- a/todo/templates/todo/create.html
+++ b/todo/templates/todo/create.html
@@ -1,8 +1,14 @@
-<h1>This is CreateView</h1>
-<a href ="{% url 'todo:index' %}">一覧に戻る</a>
-<form method="post">
+{% extends 'base.html' %}
+
+{% block content %}
+
+  <h1>This is CreateView</h1>
+  <a href ="{% url 'todo:index' %}">一覧に戻る</a>
+  <form method="post">
     {% csrf_token %}
 
     {{ form.as_p }}
-    <button type="submit">save</button>
-</form>
+    <button class="btn btn-primary" type="submit">save</button>
+  </form>
+
+{% endblock content %}
