--- a/todo/templates/todo/index.html
+++ b/todo/templates/todo/index.html
@@ -1,16 +1,16 @@
-<h1>this is indexView</h1>
-<p>{{user.username}}さんがログインしています</p>
-<p>
-  <a href = "{% url 'accounts:logout' %}">ログアウト</a>
-</p>
-  <a href = "{% url 'accounts:login' %}">ログイン</a>
-</p>
-<a href ="{% url 'todo:create' %}">新規作成</a>
-{% for task in tasks %}
-  <ul>
-    <li>
-      <a href="{% url 'todo:detail' task.pk %}">{{task.title}}</a>
-      <p>{{task.created_at}}</p>
-    </li>
-  </ul>
-{% endfor %}
+{% extends 'base.html' %}
+
+{% block content %}
+
+  <h1>this is indexView</h1>
+  <a href ="{% url 'todo:create' %}">新規作成</a>
+  {% for task in tasks %}
+    <ul class="list-group">
+      <li class="list-group-item">
+        <a href="{% url 'todo:detail' task.pk %}">{{task.title}}</a>
+        <div>{{task.created_at}}</div>
+      </li>
+    </ul>
+  {% endfor %}
+
+{% endblock content %}
