--- a/todo/templates/todo/edit.html
+++ b/todo/templates/todo/edit.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load bootstrap4 %}
 
 {% block content %}
 
@@ -7,7 +8,7 @@
   <form method="post">
     {% csrf_token %}
 
-    {{ form.as_p }}
+    {% bootstrap_form form %}
     <button class="btn btn-primary" type="submit">save</button>
   </form>
 
