--- a/todo/templates/base.html
+++ b/todo/templates/base.html
@@ -18,12 +18,7 @@
           {% endblock %}
         </div>
         <div class="col-md-2">
-          <p><i class="fa fa-user"></i>{{user.username}}</p>
-          <p>
-            <a href = "{% url 'accounts:logout' %}">ログアウト</a>
-          </p>
-            <a href = "{% url 'accounts:login' %}">ログイン</a>
-          </p>
+          {% include 'todo/side.html' %}
         </div>
       </div>
     </div>
