完了ボタン作成

--- a/todo/templates/todo/detail.html
+++ b/todo/templates/todo/detail.html
@@ -2,13 +2,13 @@
 
 {% block content %}
 
-  <h1>this is DetailView</h1>
+  <h1>詳細ページ</h1>
   <a href ="{% url 'todo:index' %}">一覧に戻る</a>
   <a href ="{% url 'todo:edit' task.pk %}">編集する</a>
   <a href ="{% url 'todo:delete' task.pk %}">削除する</a>
   <div class="card">
     <div class="card-body">
-      <h3 class="card-title">{{task.title}}</h2>
+      <h3 class="card-title">{{task.title}}</h3>
       <p class="card-text">{{task.description | linebreaksbr}}</p>
       <p class="card-text">作成日時：{{task.created_at}}</p>
       <p class="card-text">{{task.created_by}}</p>
